# data_report

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  README_CN.md  design.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  structure.md
.kiro/specs/web-data-analysis-report/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.vercel/: project.json
config/: default.json
data/database/: history.db
docs/: index.md
docs/api/: analysis.md  data-models.md  endpoints.md  file-management.md  overview.md  reports.md
docs/architecture/: data-flow.md  overview.md  tech-stack.md
docs/deployment/: deployment.md  docker.md  troubleshooting.md
docs/development/: contributing.md  environment.md  setup.md  testing.md
docs/getting-started/: basic-usage.md  configuration.md  installation.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/user-guide/: interface.md  quick-start.md  result-interpretation.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: fix_path_separators.py  init_database.py
src/reporter/: __init__.py  data_loader.py  database.py  file_manager.py  logging_config.py  main.py  memory_manager.py  security.py
src/reporter/analysis/: __init__.py  basic_stats.py  correlation.py  parallel_processor.py  time_series.py
src/reporter/config/: __init__.py  config_manager.py  settings.py
src/reporter/tasks/: __init__.py  analysis_tasks.py  chunk_processor.py  task_manager.py
src/reporter/utils/: performance.py  sampling.py
static/: analysis.js  app.js  loading.css  script.js  styles.css
systemd/: data-report.service
templates/: analysis.html  index.html
tests/: test_basic_stats.py  test_charts.py  test_data_loader.py  test_e2e.py  test_security.py  test_time_series.py
tests/e2e/: conftest.py  playwright.config.py  test_browser_workflow.py  test_error_handling.py  test_file_formats.py  test_performance.py  test_utils.py
(+6 files in other folders)
