[project]
name = "data-report"
version = "0.1.0"
description = "Web-based automated data analysis and reporting tool for time-series data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "polars>=1.31.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0"
]

[tool.uv]
default-groups = "all"
# index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"  # 清华源
index-url = "https://mirrors.aliyun.com/pypi/simple" 
