[project]
name = "data-report"
version = "0.2.0"
description = "Web-based automated data analysis and reporting tool for time-series data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "polars>=1.31.0",
    "numpy>=2.3.1",
    "statsmodels>=0.14.0",
    "plotly>=6.2.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-include-markdown-plugin>=6.0.0"
]

[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-include-markdown-plugin>=6.0.0"
]

[tool.uv]
default-groups = "all"
# index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"  # 清华源
index-url = "https://mirrors.aliyun.com/pypi/simple"
